--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "materialM",
-  "version": "2.1.0",
+  "name": "Cooking.Ben",
+  "version": "0.0.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
