update for catalogue de prix

--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "ngx-pagination": "^6.0.1",
     "ngx-permissions": "^13.0.1",
     "ngx-scrollbar": "^11.0.0",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^18.0.0",
     "rxjs": "~7.5.0",
     "sass": "^1.57.1",
     "tslib": "^2.3.0",
