--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.12",
+    "quill": "^2.0.3",
     "rxjs": "~7.5.0",
     "sass": "^1.57.1",
     "tslib": "^2.3.0",
