--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "echarts": "^5.5.0",
     "echarts-gl": "^2.0.9",
     "echarts-stat": "^1.2.0",
+    "html2canvas": "^1.4.1",
     "iconify": "^1.4.0",
+    "jspdf": "^3.0.0",
     "moment": "^2.30.1",
     "ng-apexcharts": "^1.7.6",
     "ng2-search-filter": "^0.5.1",
