--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.scss",
               "src/assets/scss/style.scss",
               "node_modules/angular-calendar/css/angular-calendar.css",
