--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "cSpell.words": [
+        "Cout",
         "Feuille",
+        "Montant",
         "PLANIFICATION",
         "PLANIFIEE",
+        "quantite",
         "SELECTIONNEZ"
     ]
 }
