--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
 
     stage('Docker Build') {
       steps {
-        sh 'docker build -t cookingbenlee/client-dashboard-cooking-ben:test1 .'
+        sh 'docker build -t cookingbenlee/client-dashboard-cooking-ben:mod_client_business .'
       }
     }
 
@@ -25,7 +25,7 @@ pipeline {
 
     stage('Docker Push') {
       steps {
-        sh 'docker push cookingbenlee/client-dashboard-cooking-ben:test1'
+        sh 'docker push cookingbenlee/client-dashboard-cooking-ben:mod_client_business'
       }
     }
   }
@@ -33,7 +33,7 @@ pipeline {
   post {
     always {
       sh 'docker logout'
-      sh 'docker image rm cookingbenlee/client-dashboard-cooking-ben:test1 || true'
+      sh 'docker image rm cookingbenlee/client-dashboard-cooking-ben:mod_client_business || true'
     }
   }
 }
