Création et déploiement d’une interface standard comme page d’index « Page En cours de construction,Mises à jour de l’interface de modification du profil utilisateur (prise en compte de la modification d’information de l’utilisateur « mot de passe, logo, nom du compte etc… »),Mises à jour de l’interface liste des recettes (Implémentation du service « Je partage », ajout de la colonne et de la contrainte d’affichage « Youcooker », suppression de la colonne recette principale)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,15 @@
 {
     "cSpell.words": [
+        "compteuser",
         "Cout",
         "Feuille",
         "getallpagebyuserandbaserecipe",
         "Montant",
         "PLANIFICATION",
         "PLANIFIEE",
+        "Prévisualisation",
         "quantite",
-        "SELECTIONNEZ"
+        "SELECTIONNEZ",
+        "Underconstruction"
     ]
 }
