Mises à jour de linterface de modification dune recette (ajout des nouveaux champs) Mises à jour de linterface daffichage de détail dune recette (ajout des nouveaux champs) Mises à jour de linterface daccueil du Youcooker (Ajout du logo et nom du compte, liste des recettes par pays par utilisateurs, recherche multicritère dune recette, implémentation du service de copie dune recette dans sa base)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,12 +4,14 @@
         "Cout",
         "Feuille",
         "getallpagebyuserandbaserecipe",
+        "iduser",
         "Montant",
         "PLANIFICATION",
         "PLANIFIEE",
         "Prévisualisation",
         "quantite",
         "SELECTIONNEZ",
-        "Underconstruction"
+        "Underconstruction",
+        "uploaddir"
     ]
 }
